# epy_papers

./: .gitignore  CHANGELOG.md  LICENSE  README.md  REQUIREMENTS.md  THIRD_PARTY_NOTICES.md  build.py  epy_paper.spec  epy_papers.spec  pyproject.toml
.github/workflows/: ci.yml  installers.yml
data/: journals.json
docs/: navarro_mora_publications.md
examples/brooklyn_bridge/: README.md  brooklyn_bridge.md  brooklyn_bridge_es.md  refs.bib  render_drafts.py
installer/: make_icon.py
installer/linux/: build_deb.py
installer/windows/: epy_paper.iss  epy_papers.iss
src/epy_paper/: __init__.py  __main__.py  _authoring.py  _blocks.py  _i18n.py  _render.py  _validation.py  app.py  epyson.py  tab.py  themes.py
src/epy_paper/assets/: __init__.py  welcome.md  welcome_es.md
src/epy_paper/assets/csl/: __init__.py
src/epy_paper/assets/latex/: __init__.py
src/epy_paper/assets/reference_docx/: submission.docx  submission_lineno.docx
src/epy_paper/assets/templates/: __init__.py  manuscript.html  manuscript.latex
src/epy_paper/assets/themes/: __init__.py
src/epy_paper/data/: __init__.py
src/epy_papers/: __init__.py  __main__.py  _design.py  _i18n.py  _previews.py  _render.py  _validation.py  about_dialog.py  app.py  design_block_dialog.py  epyson.py  tab.py  theme_gallery_dialog.py  themes.py
src/epy_papers/_config/: __init__.py
src/epy_papers/_config/_assets/: __init__.py  welcome_es.md
src/epy_papers/_core/: __init__.py  _authoring.py  _blocks.py  _design.py  _latex.py  _render.py  epyson.py
src/epy_papers/_ui/: __init__.py  _previews.py  about_dialog.py  design_block_dialog.py  tab.py  theme_gallery_dialog.py  themes.py
src/epy_papers/assets/: welcome.md  welcome_es.md
tests/: _pandoc.py  conftest.py  navarro_bridge_health_index.bib  navarro_timber_beam_values.bib  navarro_upala_bridge_forensic.bib  test_api_formal.py  test_app_helpers.py  test_authoring.py  test_blocks.py  test_catalog.py  test_design_blocks.py  test_faithful_preview.py  test_import_isolation.py  test_journal_format.py  test_previews.py  test_public_api.py  test_render.py  test_replication.py  test_validation.py
tests/fixtures/: navarro_bridge_health_index.md  navarro_timber_beam_values.md  navarro_upala_bridge_forensic.md
tools/: capture_screenshots.py  make_reference_docx.py
tutorials/brooklyn_bridge/: README.md  brooklyn_bridge.md  brooklyn_bridge_es.md  render_drafts.py
(+17 files in other folders)
