[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epy_paper"
version = "0.1.0"
description = "Write a paper once, export a journal-compliant submission draft."
authors = [{ name = "Ing. Angel Navarro-Mora M.Sc.", email = "ahnavarroitcr@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
classifiers = ["License :: Other/Proprietary License"]
dependencies = [
    "pypandoc-binary>=1.13",
    "PyYAML>=6.0",
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "python-docx>=1.1"]

[project.gui-scripts]
epy_paper = "epy_paper.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/epy_paper"]
# assets/ is a sub-package (has __init__.py) so hatchling walks into it and
# bundles every asset alongside the .py files — no force-include needed.

[tool.ruff]
line-length = 79
target-version = "py310"
src = ["src", "tests", "tools"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "D", "UP", "B", "SIM"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"epy_paper.spec" = ["D", "F821", "E501"]
"tools/**/*.py" = ["D", "E501"]
"installer/**/*.py" = ["D", "E402", "E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
